<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mapcar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_location">Current Location</string>
    <string name="map_info">Map Info</string>
    <string name="create_note">Create Note</string>
    
        <!-- login -->
    <string name="Ledit_name">Username</string>
    <string name="Ledit_password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Sign up</string>
    <string name="register_hint">Don\'t have an account?</string>
    
    <!-- register -->
    <string name="Redit_email">Email</string>
    <string name="signup">Create Account</string>
    <string name="login_hint">Already have an account?</string>

</resources>
