<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE4D6" >

    <RelativeLayout
        android:id="@+id/loginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_mid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/loginTop"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp" >

        <LinearLayout
            android:id="@+id/linear_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/security_row_center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#D3C9BF" >
            </LinearLayout>

            <EditText
                android:id="@+id/Ledit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/security_row_username1"
                android:hint="@string/Ledit_name"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingTop="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#D3C9BF" >
            </LinearLayout>

            <EditText
                android:id="@+id/Ledit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/security_row_password"
                android:drawableRight="@drawable/security_row_forgot1"
                android:hint="@string/Ledit_password"
                android:inputType="textPassword"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#D3C9BF" >
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linear_top"
            android:layout_below="@id/linear_top"
            android:layout_marginTop="18dp"
            android:background="@drawable/security_row_button1"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>
    
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_down"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#F9F8F1" >

        <TextView
            android:id="@+id/register_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/register_hint" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/register_hint"
            android:layout_marginLeft="8dp"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>